se subieron las imagenes para noticias

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide 320px:border 320px:border-gray-400 rounded-lg">
                         <div class="320px:h-44">
-                            <img class="h-full w-full object-cover rounded-sm" src="https://scontent.flim41-1.fna.fbcdn.net/v/t39.30808-6/468535417_979846504161189_1898002403222593944_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_ohc=KgkRidmETWAQ7kNvgFl2ALi&_nc_zt=23&_nc_ht=scontent.flim41-1.fna&_nc_gid=ARVtqGhkg5cPb8nIoY3bjvA&oh=00_AYDMOZ5OULtBuu7EaQ8k5uZyKY5uicscf22QlgijxPPekw&oe=67582C6D" alt="imagenes De Noticias">
+                            <img class="h-full w-full object-cover rounded-sm" src="./images/noticias/nat_10.webp" alt="imagenes De Noticias">
                         </div>
                         <div class="320px:px-2 320px:py-4">
                             <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm ">¿Quieres mejorar tu técnica de natación? En enero, CLC te ofrece un descuento del 10% en paquetes de 12 clases. ¡Aprovecha esta oportunidad!</p>
@@ -211,7 +211,7 @@
                     </div>
                     <div class="swiper-slide 320px:border 320px:border-gray-400 rounded-lg">
                         <div class="320px:h-44">
-                            <img class="h-full w-full object-cover rounded-sm" src="https://scontent.flim41-1.fna.fbcdn.net/v/t39.30808-6/468636030_979846530827853_3546055456016734609_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=127cfc&_nc_ohc=5PXzZQZ-I_kQ7kNvgEomKnz&_nc_zt=23&_nc_ht=scontent.flim41-1.fna&_nc_gid=AVXNlDYhHgnHJbMKI9yTb2p&oh=00_AYDyLTEw-1RqDn7XzyFuYj2F7KugDTUXDS7-FFDFtv_UVw&oe=675842D9" alt="imagenes De Noticias">
+                            <img class="h-full w-full object-cover rounded-sm" src="./images/noticias/not_15.webp" alt="imagenes De Noticias">
                         </div>
                         <div class="320px:px-2 320px:py-4">
                             <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm">¡Este verano, nada con descuento! CLC te ofrece un 15% de descuento en paquetes de 24 clases durante enero y febrero. ¡No te lo pierdas!</p>
@@ -245,7 +245,7 @@
                     </div>
                     <div class="swiper-slide 320px:border 320px:border-gray-400 rounded-lg">
                         <div class="320px:h-44">
-                            <img class="h-full w-full object-cover rounded-sm" src="https://scontent.flim41-1.fna.fbcdn.net/v/t39.30808-6/469214152_985631843582655_4401823691071737334_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=127cfc&_nc_ohc=bMpmeTdTNC4Q7kNvgH_KE38&_nc_zt=23&_nc_ht=scontent.flim41-1.fna&_nc_gid=AsfwClBnpHpgNpw-Ip3G_8T&oh=00_AYCronTsAhUgKUufGND35CPDPhbg2mkMha8g98ZJQYaEyA&oe=67583FD8" alt="imagenes De Noticias">
+                            <img class="h-full w-full object-cover rounded-sm" src="./images/noticias/not_vinculo.webp" alt="imagenes De Noticias">
                         </div>
                         <div class="320px:px-2 320px:py-4">
                             <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm">Juntos formamos una gran comunidad educativa. Católica School, CLC y Católica Kids unidos por la educación.</p>
@@ -262,7 +262,7 @@
                     </div>
                     <div class="swiper-slide 320px:border 320px:border-gray-400 rounded-lg">
                         <div class="320px:h-44">
-                            <img class="h-full w-full object-cover rounded-sm" src="https://scontent.flim41-1.fna.fbcdn.net/v/t39.30808-6/467692737_975464641266042_6819062073528959233_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_ohc=StyrBTBfoHwQ7kNvgFxvx-Y&_nc_zt=23&_nc_ht=scontent.flim41-1.fna&_nc_gid=AKCit4v7DlUUp1y92jgnbs4&oh=00_AYBAArNeYvxr-cebYTrymiJxGIkORBs8_AUeOjH_B7P_yg&oe=67582625" alt="imagenes De Noticias">
+                            <img class="h-full w-full object-cover rounded-sm" src="./images/noticias/not_seleccion.webp" alt="imagenes De Noticias">
                         </div>
                         <div class="320px:px-2 320px:py-4">
                             <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm">¡Forma parte de nuestro equipo de campeones! Inscríbete en la selección de natación de CLC ¡ Ellos te esperan!</p>
@@ -279,7 +279,7 @@
                     </div>
                     <div class="swiper-slide 320px:border 320px:border-gray-400 rounded-lg">
                         <div class="320px:h-44">
-                            <img class="h-full w-full object-cover rounded-sm" src="https://scontent.flim41-1.fna.fbcdn.net/v/t39.30808-6/466727070_970584441754062_1788023015792598431_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=127cfc&_nc_ohc=C-cBz3E9yK0Q7kNvgExF5Gj&_nc_zt=23&_nc_ht=scontent.flim41-1.fna&_nc_gid=AjRWgLWtFpavgYfgVxzCM4M&oh=00_AYCHSp_KLFdHe05Q6QmvKGoAkGmRhG5AXZm5ZTODyhsMqg&oe=67582E1A" alt="imagenes De Noticias">
+                            <img class="h-full w-full object-cover rounded-sm" src="./images/noticias/nat_sele.webp" alt="imagenes De Noticias">
                         </div>
                         <div class="320px:px-2 320px:py-4">
                             <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm">Nuestra selección de natación CLC 2024 demostró una vez más su pasión y compromiso en cada entrenamiento. ¡Gracias a todos por su esfuerzo!</p>
