nav solucionado en diseño mobil

--- a/pages/natacion.html
+++ b/pages/natacion.html
@@ -70,16 +70,16 @@
                     <a id="inicio_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#header">
                         <li class="">Inicio</li>
                     </a>
-                    <a id="nosotros_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#nosotros">
+                    <a id="nosotros_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="/index.html>
                         <li class="">Nosotros</li>
                     </a>
-                    <a id="tallere_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#talleres_costos">
+                    <a id="tallere_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="/index.html#talleres_costos">
                         <li class="">Talleres y Costos</li>
                     </a>
-                    <a id="noticias_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#noticias">
+                    <a id="noticias_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="/index.html#noticias">
                         <li class="">Noticias</li>
                     </a>
-                    <a id="galeria_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#galeria">
+                    <a id="galeria_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="/index.html#galeria">
                         <li class="">Galeria</li>
                     </a>
                     <a id="contactanos_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#contacto">
